added typescript config files and added loader on webpack config, add eslint rules

--- a/src/containers/LoginForm/style.scss
+++ b/src/containers/LoginForm/style.scss
@@ -1,4 +1,4 @@
-.sign-in{
+.login{
     &-container  {
         width: 30%;
         margin: 3rem auto;
@@ -7,9 +7,7 @@
     }
 
     &_inputs {
-        input {
-                
-        }
+        
     }
 
     &_buttons {
