--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -2,3 +2,10 @@
     font-size: 30px;
     color: white;
 }
+
+.header {
+    display: flex;
+    position: fixed;
+    z-index: 100;
+    width: 100%;
+}
